Some layout issues delt with

--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -52,6 +52,6 @@
     display: grid;
     grid-template-columns: 0fr 1fr;
     grid-gap: 2rem;
-    width: 30%
+    width: 50%
   }
 }
